js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
